--- a/day5-practice-time/index.html
+++ b/day5-practice-time/index.html
@@ -14,16 +14,16 @@
   </head>
   <body>
     <div class="hero">
-      <div class="hero-container">
-        <h1 class="hero-title">
-          Responsive layouts don't have to be a struggle
-        </h1>
-        <p class="hero-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam.
-        </p>
-        <a class="btn" href="#">I want to learn</a>
+      <div class="container">
+        <div class="hero__text">
+          <h1>Responsive layouts don't have to be a struggle</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam.
+          </p>
+          <a class="btn" href="#">I want to learn</a>
+        </div>
       </div>
     </div>
   </body>
