--- a/day9-a-deeper-dive-into-flexbox/index.html
+++ b/day9-a-deeper-dive-into-flexbox/index.html
@@ -13,32 +13,50 @@
     />
   </head>
   <body>
-    <section>
-      <div>
-        <div>
-          <h1>Responsive layouts don't have to be a struggle</h1>
-          <p>
+    <section class="hero">
+      <div class="container two-cols">
+        <div class="two-cols__main">
+          <h1 class="hero__title">
+            Responsive layouts don't have to be a struggle
+          </h1>
+          <p class="hero__text">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore et
             numquam dicta dolore beatae voluptatibus labore libero corrupti
             error facere eaque rerum dolor praesentium soluta cum, perferendis,
             ullam molestias magni.
           </p>
-          <a href="#">I want to learn</a>
+          <a class="btn" href="#">I want to learn</a>
         </div>
-        <img src="./img/hero-img.jpg" alt="website sketch" />
+        <img
+          class="two-cols__secondary"
+          src="./img/hero-img.jpg"
+          alt="website sketch"
+        />
       </div>
     </section>
-    <section>
-      <div>
-        <div>
-          <h2>Quality designs made custom, on demand, just for you</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing
-            elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam.
-          </p>
+    <section class="container two-cols">
+      <div class="two-cols__main">
+        <h2 class="text-green">
+          Quality designs made custom, on demand, just for you
+        </h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+          enim ad minim veniam.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+          enim ad minim veniam.
+        </p>
+      </div>
+      <div class="sidebar two-cols__secondary bg-green text-center">
+        <div class="sidebar__content">
+          <h2>Cheap</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -47,37 +65,25 @@
             aliqua. Ut enim ad minim veniam.
           </p>
         </div>
-        <div>
-          <div>
-            <h3>Cheap</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur
-              adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam.
-            </p>
-          </div>
-          <div>
-            <h3>Quick</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur
-              adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam.
-            </p>
-          </div>
-          <div>
-            <h3>Quality</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur
-              adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam.
-            </p>
-          </div>
+        <div class="sidebar__content">
+          <h2>Quick</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam.
+          </p>
+        </div>
+        <div class="sidebar__content">
+          <h2>Quality</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam.
+          </p>
         </div>
       </div>
     </section>
