feat(day12): add my solution

--- a/day12-flexbox-challenge-4/index.html
+++ b/day12-flexbox-challenge-4/index.html
@@ -5,8 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Day 12 | Flexbox Challenge 4</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Roboto:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>hola</h1>
+    <section class="hero">
+      <span class="hero__subtitle">lorem ipsum sit</span>
+      <h2 class="hero__title">
+        Responsive layouts don't have to be a struggle
+      </h2>
+    </section>
+    <main>
+      <section>
+        <div class="container">
+          <h3 class="section__title text-center clr-medium">Quality Designs</h3>
+          <div class="two-cols">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+              doloribus, sit pariatur excepturi fugiat corrupti sapiente
+              dignissimos dolorem neque vero, veritatis aliquam rem earum
+              assumenda esse omnis! Sequi, molestias minima.
+            </p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione
+              similique iusto labore architecto quia illum temporibus odio
+              suscipit soluta dolorem enim quas, sint veniam, laboriosam
+              accusamus! Quae voluptatum dolor explicabo!
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="bg-dark">
+        <div class="container two-cols">
+          <div class="col-text">
+            <h3 class="section__title">Made custom for you</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut illo
+              incidunt cupiditate ut animi dignissimos voluptatibus, soluta odio
+              voluptatum facere eos, facilis corporis quo hic fugiat
+              necessitatibus explicabo sapiente in.
+            </p>
+          </div>
+          <div class="col-img">
+            <img src="./img/image-01.jpg" alt="landscape with a man" />
+          </div>
+        </div>
+      </section>
+      <section class="bg-medium">
+        <div class="container two-cols two-cols--reverse">
+          <div class="col-text">
+            <h3 class="section__title">Created with care</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo sit
+              consectetur omnis hic in saepe, repudiandae earum suscipit
+              voluptatum consequatur eveniet recusandae explicabo vero. Sunt
+              quasi molestiae deleniti odio aut!
+            </p>
+          </div>
+          <div class="col-img">
+            <img src="./img/image-02.jpg" alt="landscape with a tree" />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
