--- a/day21-final-challenge/index.html
+++ b/day21-final-challenge/index.html
@@ -1,183 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Day 21 | Final Challenge</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day 21 | Final Challenge</title>
-</head>
-
-<body>
-  <header class="primary-header">
-    <div class="container">
-      <button class="nav-toggle" aria-label="open navigation">
-        <span class="hamburger" />
-      </button>
-      <a href="/" class="logo">
-        <img src="img/logo.svg" alt="conquering responsive layouts" />
-      </a>
-      <nav class="nav">
-        <ul class="nav__list nav__list--primary">
-          <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
-        </ul>
-        <ul class="nav__list nav__list--secondary">
-          <li class="nav__item"><a href="#" class="nav__link">Sign in</a></li>
-          <li class="nav__item"><a href="#" class="nav__link nav__link--button">Sign up</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <section class="hero">
-    <div class="container row">
-      <div class="col">
-        <h1 class="hero__title">Responsive layouts <b>don't have to be a struggle</b></h1>
-      </div>
-      <div class="col">
-        <p class="hero__text">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab quae vero perspiciatis, in
-          iusto impedit consequatur earum architecto iure.
-        </p>
-        <a href="#" class="btn">I want to learn</a>
-      </div>
-    </div>
-  </section>
-  <main>
-    <section class="primary-section">
+  <body>
+    <header class="primary-header">
       <div class="container row">
-        <div class="col">
-          <div class="card">
-            <h3 class="card__title card__title--secondary">Mobile-first</h3>
-            <p class="card__text">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis consequatur esse
-              aliquam rem fuga asperiores obcaecati, eum facere fugiat numquam, dolorem adipisci deserunt ad?
-            </p>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <h3 class="card__title card__title--secondary">Efficient</h3>
-            <p class="card__text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit officia maxime vitae?
-              Distinctio nesciunt voluptatum harum. Dignissimos porro facilis perspiciatis doloribus odit iste quis.
-            </p>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <h3 class="card__title card__title--secondary">Done right</h3>
-            <p class="card__text">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates reiciendis facere
-              blanditiis aperiam exercitationem pariatur autem dignissimos iste, asperiores porro, quas cupiditate quo
-              assumenda.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="secondary-section">
-      <div class="container row">
-        <div class="col">
-          <h2 class="section-title">It doesn't have to be so hard</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque quae, ducimus blanditiis aspernatur beatae
-            nemo? Officiis eius, accusamus dolores illum nihil aspernatur optio, numquam quaerat debitis neque,
-            voluptatum blanditiis. Rerum dolore, doloribus totam hic ipsum quod. Ipsam autem sit accusamus dolorum
-            impedit vitae voluptatibus, perspiciatis voluptatum itaque aperiam.
-          </p>
-          <img src="img/the-image.jpg" alt="UX design sketches">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque quae, ducimus blanditiis aspernatur beatae
-            nemo? Officiis eius, accusamus dolores illum nihil aspernatur optio, numquam quaerat debitis neque,
-            voluptatum blanditiis. Rerum dolore, doloribus totam hic ipsum quod. Ipsam autem sit accusamus dolorum
-            impedit vitae voluptatibus, perspiciatis voluptatum itaque aperiam.
-          </p>
-        </div>
-        <div class="col">
-          <div class="card">
-            <h3 class="card__title">Break it down</h3>
-            <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis animi quisquam
-              perferendis placeat reprehenderit autem dolorem voluptatibus perspiciatis ut.</p>
-          </div>
-          <div class="card">
-            <h3 class="card__title">Work you way up</h3>
-            <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus reprehenderit
-              aliquid libero voluptatem officia! Temporibus ea est culpa amet.</p>
-          </div>
-          <div class="card">
-            <h3 class="card__title">Something?</h3>
-            <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum laudantium est facere
-              labore aut, modi fugit voluptate vitae culpa!</p>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-  <footer>
-    <div class="container">
-      <h2 class="footer-title">Just scratching the surface</h2>
-      <div class="row">
-        <div class="col about">
-          <h4 class="about__title">About our company</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut illum iste sunt quod cum asperiores, quisquam
-            tempore nemo maxime ducimus. Dolore odio nulla magni.
-          </p>
-        </div>
-        <nav class="col secondary-nav row">
-          <div class="col">
-            <h4 class="secondary-nav__title">Getting around</h4>
-            <ul class="secondary-nav__list">
-              <li class="secondary-nav__item">
-                <a href="#" class="secondary-nav__link">Home</a>
-              </li>
-              <li class="secondary-nav__item">
-                <a href="#" class="secondary-nav__link">About</a>
-              </li>
-              <li class="secondary-nav__item">
-                <a href="#" class="secondary-nav__link">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col">
-            <h4 class="secondary-nav__title">Other things</h4>
-            <ul class="secondary-nav__list">
-              <li class="secondary-nav__item">
-                <a href="#" class="secondary-nav__link">Lorem ipsum</a>
-              </li>
-              <li class="secondary-nav__item">
-                <a href="#" class="secondary-nav__link">dolor</a>
-              </li>
-              <li class="secondary-nav__item">
-                <a href="#" class="secondary-nav__link">sit amet</a>
-              </li>
-              <li class="secondary-nav__item">
-                <a href="#" class="secondary-nav__link">consectetur</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col">
-            <h4 class="secondary-nav__title">And more</h4>
-            <ul class="secondary-nav__list">
-              <li class="secondary-nav__item">
-                <a href="#" class="secondary-nav__link">Lorem ipsum</a>
-              </li>
-              <li class="secondary-nav__item">
-                <a href="#" class="secondary-nav__link">dolor</a>
-              </li>
-              <li class="secondary-nav__item">
-                <a href="#" class="secondary-nav__link">sit amet</a>
-              </li>
-              <li class="secondary-nav__item">
-                <a href="#" class="secondary-nav__link">consectetur</a>
-              </li>
-            </ul>
-          </div>
+        <a href="/" class="logo">
+          <img src="img/logo.svg" alt="conquering responsive layouts" />
+        </a>
+        <button class="nav-toggle" aria-label="open navigation">
+          <span class="hamburger" />
+        </button>
+        <nav class="nav">
+          <ul class="nav__list nav__list--primary">
+            <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+          </ul>
+          <ul class="nav__list nav__list--secondary">
+            <li class="nav__item"><a href="#" class="nav__link">Sign in</a></li>
+            <li class="nav__item">
+              <a href="#" class="nav__link nav__link--button">Sign up</a>
+            </li>
+          </ul>
         </nav>
       </div>
-    </div>
-  </footer>
-</body>
-
+    </header>
+    <section class="hero">
+      <div class="container row">
+        <div class="col">
+          <h1 class="hero__title">
+            Responsive layouts <b>don't have to be a struggle</b>
+          </h1>
+        </div>
+        <div class="col">
+          <p class="hero__text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab quae
+            vero perspiciatis, in iusto impedit consequatur earum architecto
+            iure.
+          </p>
+          <a href="#" class="btn">I want to learn</a>
+        </div>
+      </div>
+    </section>
+    <main>
+      <section class="primary-section">
+        <div class="container row">
+          <div class="col">
+            <div class="card">
+              <h3 class="card__title card__title--secondary">Mobile-first</h3>
+              <p class="card__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis
+                consequatur esse aliquam rem fuga asperiores obcaecati, eum
+                facere fugiat numquam, dolorem adipisci deserunt ad?
+              </p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <h3 class="card__title card__title--secondary">Efficient</h3>
+              <p class="card__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+                officia maxime vitae? Distinctio nesciunt voluptatum harum.
+                Dignissimos porro facilis perspiciatis doloribus odit iste quis.
+              </p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <h3 class="card__title card__title--secondary">Done right</h3>
+              <p class="card__text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates reiciendis facere blanditiis aperiam exercitationem
+                pariatur autem dignissimos iste, asperiores porro, quas
+                cupiditate quo assumenda.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="secondary-section">
+        <div class="container row">
+          <div class="col">
+            <h2 class="section-title">It doesn't have to be so hard</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque
+              quae, ducimus blanditiis aspernatur beatae nemo? Officiis eius,
+              accusamus dolores illum nihil aspernatur optio, numquam quaerat
+              debitis neque, voluptatum blanditiis. Rerum dolore, doloribus
+              totam hic ipsum quod. Ipsam autem sit accusamus dolorum impedit
+              vitae voluptatibus, perspiciatis voluptatum itaque aperiam.
+            </p>
+            <img src="img/the-image.jpg" alt="UX design sketches" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque
+              quae, ducimus blanditiis aspernatur beatae nemo? Officiis eius,
+              accusamus dolores illum nihil aspernatur optio, numquam quaerat
+              debitis neque, voluptatum blanditiis. Rerum dolore, doloribus
+              totam hic ipsum quod. Ipsam autem sit accusamus dolorum impedit
+              vitae voluptatibus, perspiciatis voluptatum itaque aperiam.
+            </p>
+          </div>
+          <div class="col">
+            <div class="card">
+              <h3 class="card__title">Break it down</h3>
+              <p class="card__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis
+                animi quisquam perferendis placeat reprehenderit autem dolorem
+                voluptatibus perspiciatis ut.
+              </p>
+            </div>
+            <div class="card">
+              <h3 class="card__title">Work you way up</h3>
+              <p class="card__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Temporibus reprehenderit aliquid libero voluptatem officia!
+                Temporibus ea est culpa amet.
+              </p>
+            </div>
+            <div class="card">
+              <h3 class="card__title">Something?</h3>
+              <p class="card__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+                laudantium est facere labore aut, modi fugit voluptate vitae
+                culpa!
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="container">
+        <h2 class="footer-title">Just scratching the surface</h2>
+        <div class="row">
+          <div class="col about">
+            <h4 class="about__title">About our company</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut illum
+              iste sunt quod cum asperiores, quisquam tempore nemo maxime
+              ducimus. Dolore odio nulla magni.
+            </p>
+          </div>
+          <nav class="col secondary-nav row">
+            <div class="col">
+              <h4 class="secondary-nav__title">Getting around</h4>
+              <ul class="secondary-nav__list">
+                <li class="secondary-nav__item">
+                  <a href="#" class="secondary-nav__link">Home</a>
+                </li>
+                <li class="secondary-nav__item">
+                  <a href="#" class="secondary-nav__link">About</a>
+                </li>
+                <li class="secondary-nav__item">
+                  <a href="#" class="secondary-nav__link">Contact</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col">
+              <h4 class="secondary-nav__title">Other things</h4>
+              <ul class="secondary-nav__list">
+                <li class="secondary-nav__item">
+                  <a href="#" class="secondary-nav__link">Lorem ipsum</a>
+                </li>
+                <li class="secondary-nav__item">
+                  <a href="#" class="secondary-nav__link">dolor</a>
+                </li>
+                <li class="secondary-nav__item">
+                  <a href="#" class="secondary-nav__link">sit amet</a>
+                </li>
+                <li class="secondary-nav__item">
+                  <a href="#" class="secondary-nav__link">consectetur</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col">
+              <h4 class="secondary-nav__title">And more</h4>
+              <ul class="secondary-nav__list">
+                <li class="secondary-nav__item">
+                  <a href="#" class="secondary-nav__link">Lorem ipsum</a>
+                </li>
+                <li class="secondary-nav__item">
+                  <a href="#" class="secondary-nav__link">dolor</a>
+                </li>
+                <li class="secondary-nav__item">
+                  <a href="#" class="secondary-nav__link">sit amet</a>
+                </li>
+                <li class="secondary-nav__item">
+                  <a href="#" class="secondary-nav__link">consectetur</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </footer>
+    <script src="index.js"></script>
+  </body>
 </html>
