add mobile-first css

--- a/day21-final-challenge/index.html
+++ b/day21-final-challenge/index.html
@@ -59,7 +59,7 @@
         <div class="container row">
           <div class="col">
             <div class="card">
-              <h3 class="card__title card__title--secondary">Mobile-first</h3>
+              <h3 class="card__title card__title--accent">Mobile-first</h3>
               <p class="card__text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis
                 consequatur esse aliquam rem fuga asperiores obcaecati, eum
@@ -69,7 +69,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <h3 class="card__title card__title--secondary">Efficient</h3>
+              <h3 class="card__title card__title--accent">Efficient</h3>
               <p class="card__text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
                 officia maxime vitae? Distinctio nesciunt voluptatum harum.
@@ -79,7 +79,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <h3 class="card__title card__title--secondary">Done right</h3>
+              <h3 class="card__title card__title--accent">Done right</h3>
               <p class="card__text">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Voluptates reiciendis facere blanditiis aperiam exercitationem
@@ -94,7 +94,7 @@
         <div class="container row">
           <div class="col">
             <h2 class="section-title">It doesn't have to be so hard</h2>
-            <p>
+            <p class="section-text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque
               quae, ducimus blanditiis aspernatur beatae nemo? Officiis eius,
               accusamus dolores illum nihil aspernatur optio, numquam quaerat
@@ -103,7 +103,7 @@
               vitae voluptatibus, perspiciatis voluptatum itaque aperiam.
             </p>
             <img src="img/the-image.jpg" alt="UX design sketches" />
-            <p>
+            <p class="section-text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque
               quae, ducimus blanditiis aspernatur beatae nemo? Officiis eius,
               accusamus dolores illum nihil aspernatur optio, numquam quaerat
@@ -113,7 +113,7 @@
             </p>
           </div>
           <div class="col">
-            <div class="card">
+            <div class="card card--dark card--in-stack">
               <h3 class="card__title">Break it down</h3>
               <p class="card__text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis
@@ -121,7 +121,7 @@
                 voluptatibus perspiciatis ut.
               </p>
             </div>
-            <div class="card">
+            <div class="card card--dark card--in-stack">
               <h3 class="card__title">Work you way up</h3>
               <p class="card__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -129,7 +129,7 @@
                 Temporibus ea est culpa amet.
               </p>
             </div>
-            <div class="card">
+            <div class="card card--dark card--in-stack">
               <h3 class="card__title">Something?</h3>
               <p class="card__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
@@ -141,13 +141,13 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="container">
         <h2 class="footer-title">Just scratching the surface</h2>
         <div class="row">
           <div class="col about">
-            <h4 class="about__title">About our company</h4>
-            <p>
+            <h4 class="footer-subtitle">About our company</h4>
+            <p class="footer-text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut illum
               iste sunt quod cum asperiores, quisquam tempore nemo maxime
               ducimus. Dolore odio nulla magni.
@@ -155,50 +155,64 @@
           </div>
           <nav class="col secondary-nav row">
             <div class="col">
-              <h4 class="secondary-nav__title">Getting around</h4>
+              <h4 class="footer-subtitle">Getting around</h4>
               <ul class="secondary-nav__list">
                 <li class="secondary-nav__item">
-                  <a href="#" class="secondary-nav__link">Home</a>
+                  <a href="#" class="footer-text secondary-nav__link">Home</a>
                 </li>
                 <li class="secondary-nav__item">
-                  <a href="#" class="secondary-nav__link">About</a>
+                  <a href="#" class="footer-text secondary-nav__link">About</a>
                 </li>
                 <li class="secondary-nav__item">
-                  <a href="#" class="secondary-nav__link">Contact</a>
+                  <a href="#" class="footer-text secondary-nav__link"
+                    >Contact</a
+                  >
                 </li>
               </ul>
             </div>
             <div class="col">
-              <h4 class="secondary-nav__title">Other things</h4>
+              <h4 class="footer-subtitle">Other things</h4>
               <ul class="secondary-nav__list">
                 <li class="secondary-nav__item">
-                  <a href="#" class="secondary-nav__link">Lorem ipsum</a>
+                  <a href="#" class="footer-text secondary-nav__link"
+                    >Lorem ipsum</a
+                  >
                 </li>
                 <li class="secondary-nav__item">
-                  <a href="#" class="secondary-nav__link">dolor</a>
+                  <a href="#" class="footer-text secondary-nav__link">dolor</a>
                 </li>
                 <li class="secondary-nav__item">
-                  <a href="#" class="secondary-nav__link">sit amet</a>
+                  <a href="#" class="footer-text secondary-nav__link"
+                    >sit amet</a
+                  >
                 </li>
                 <li class="secondary-nav__item">
-                  <a href="#" class="secondary-nav__link">consectetur</a>
+                  <a href="#" class="footer-text secondary-nav__link"
+                    >consectetur</a
+                  >
                 </li>
               </ul>
             </div>
             <div class="col">
-              <h4 class="secondary-nav__title">And more</h4>
+              <h4 class="footer-subtitle">And more</h4>
               <ul class="secondary-nav__list">
                 <li class="secondary-nav__item">
-                  <a href="#" class="secondary-nav__link">Lorem ipsum</a>
+                  <a href="#" class="footer-text secondary-nav__link"
+                    >Lorem ipsum</a
+                  >
                 </li>
                 <li class="secondary-nav__item">
-                  <a href="#" class="secondary-nav__link">dolor</a>
+                  <a href="#" class="footer-text secondary-nav__link">dolor</a>
                 </li>
                 <li class="secondary-nav__item">
-                  <a href="#" class="secondary-nav__link">sit amet</a>
+                  <a href="#" class="footer-text secondary-nav__link"
+                    >sit amet</a
+                  >
                 </li>
                 <li class="secondary-nav__item">
-                  <a href="#" class="secondary-nav__link">consectetur</a>
+                  <a href="#" class="footer-text secondary-nav__link"
+                    >consectetur</a
+                  >
                 </li>
               </ul>
             </div>
