add tablet style

--- a/day21-final-challenge/index.html
+++ b/day21-final-challenge/index.html
@@ -112,8 +112,8 @@
               vitae voluptatibus, perspiciatis voluptatum itaque aperiam.
             </p>
           </div>
-          <div class="col">
-            <div class="card card--dark card--in-stack">
+          <div class="col cards">
+            <div class="card card--dark">
               <h3 class="card__title">Break it down</h3>
               <p class="card__text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis
@@ -121,7 +121,7 @@
                 voluptatibus perspiciatis ut.
               </p>
             </div>
-            <div class="card card--dark card--in-stack">
+            <div class="card card--dark">
               <h3 class="card__title">Work you way up</h3>
               <p class="card__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -129,7 +129,7 @@
                 Temporibus ea est culpa amet.
               </p>
             </div>
-            <div class="card card--dark card--in-stack">
+            <div class="card card--dark">
               <h3 class="card__title">Something?</h3>
               <p class="card__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
