add desktop styles

--- a/day21-final-challenge/index.html
+++ b/day21-final-challenge/index.html
@@ -38,7 +38,7 @@
       </div>
     </header>
     <section class="hero">
-      <div class="container row">
+      <div class="container row hero__container">
         <div class="col">
           <h1 class="hero__title">
             Responsive layouts <b>don't have to be a struggle</b>
@@ -144,7 +144,7 @@
     <footer class="footer">
       <div class="container">
         <h2 class="footer-title">Just scratching the surface</h2>
-        <div class="row">
+        <div class="row footer-container">
           <div class="col about">
             <h4 class="footer-subtitle">About our company</h4>
             <p class="footer-text">
@@ -154,7 +154,7 @@
             </p>
           </div>
           <nav class="col secondary-nav row">
-            <div class="col">
+            <div class="col secondary-nav-container">
               <h4 class="footer-subtitle">Getting around</h4>
               <ul class="secondary-nav__list">
                 <li class="secondary-nav__item">
@@ -170,7 +170,7 @@
                 </li>
               </ul>
             </div>
-            <div class="col">
+            <div class="col secondary-nav-container">
               <h4 class="footer-subtitle">Other things</h4>
               <ul class="secondary-nav__list">
                 <li class="secondary-nav__item">
@@ -193,7 +193,7 @@
                 </li>
               </ul>
             </div>
-            <div class="col">
+            <div class="col secondary-nav-container">
               <h4 class="footer-subtitle">And more</h4>
               <ul class="secondary-nav__list">
                 <li class="secondary-nav__item">
